# nixpkgs-wch-dev

./: .gitignore  LICENSE  README.MD  flake.nix  overlay.nix
examples/blink/: .clangd  CMakeLists.txt  flake.nix
examples/blink/APP/: main.c
mkWCHProject/: default.nix
mkWCHShell/: default.nix
pkgs/sdk/: default.nix
pkgs/sdk/ch58x/: default.nix  header-case.patch
pkgs/toolchains/: default.nix
pkgs/toolchains/mrs-toolchain/: default.nix
pkgs/toolchains/xpack-riscv-none-elf/: default.nix
pkgs/tools/wchisp/: default.nix
shells/: ch58x.nix
